fix a couple render bugs with shifts. display shifts more nicely on use page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,71 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-/*
-  User show page (shifts, swap requests)
- */
-
-.shift_area {
-  margin-left: 20px;
-
-  .my_shifts {
-    width: 500px;
-    border: 1px solid #333333;
-    padding: 4px;
-
-    .shift {
-      width: 100%;
-
-      .shift_header {
-        clear: both;
-        height: 20px;
-        margin: 10px 0;
-
-        .left_content {
-          float: left;
-          margin-left: 10px;
-          width: 350px;
-          font-weight: bold;
-          padding: 4px;
-
-          &:hover {
-            cursor: pointer;
-            background-color: #3B5998;
-            color: #ffffff;
-          }
-        }
-
-        .right_content {
-          float: right;
-          margin-right: 10px;
-          padding: 4px;
-        }
-      }
-    }
-
-    .shift_add {
-      text-align: center;
-    }
-    .shift_add_link {
-      position: relative;
-      margin: 0 auto;
-      display: inline-block;
-      padding: 6px;
-      height: 30px;
-      line-height: 30px;
-      vertical-align: middle;
-      text-align: center;
-      font-size: 14px;
-      text-decoration: none;
-      background-color: #3B5998;
-      color: #ffffff;
-    }
-  }
-}
-
-
-
-
 #alert_area {
   position: fixed;
   top: 200px;
